--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.10"
+    ext.kotlin_version = "1.4.21"
+    ext.hilt_version = "2.29.1-alpha"
+    ext.hiltViewModelVersion = '1.0.0-alpha02'
+
     repositories {
         google()
         jcenter()
@@ -9,6 +12,9 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.4'
+
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
