--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext.kotlin_version = "1.4.21"
     ext.hilt_version = "2.29.1-alpha"
     ext.hiltViewModelVersion = '1.0.0-alpha02'
+    ext.nav_version = "2.3.2"
 
     repositories {
         google()
@@ -14,6 +15,8 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.4'
 
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
 
         // NOTE: Do not place your application dependencies here; they belong
