feat: Add WebViewFragment for tos and privacy policy

--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,6 @@ fabric.properties
 ### AndroidStudio Patch ###
 
 !/gradle/wrapper/gradle-wrapper.jar
+
+# Secret string class ex.url
+app/src/main/java/org/sopt/santamanitto/SecretString.kt
