--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.Base">
+        android:theme="@style/AppTheme.Base"
+        android:usesCleartextTraffic="true">
         <activity android:name=".signin.fragment.SignInActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
