--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,6 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
 
     defaultConfig {
         applicationId "org.sopt.santamanitto"
@@ -87,6 +86,7 @@ android {
     kotlinOptions {
         jvmTarget = '17'
     }
+    namespace 'org.sopt.santamanitto'
 }
 
 dependencies {
