--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         <activity android:name=".room.manittoroom.ManittoRoomActivity" />
         <activity android:name=".room.create.CreateRoomActivity" />
         <activity android:name=".user.signin.SignInActivity" />
-        <activity android:name=".SplashActivity">
+        <activity
+            android:name=".SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
