--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation "com.jakewharton.timber:timber:5.0.1"
 
     //firebase
     implementation platform('com.google.firebase:firebase-bom:32.8.0')
