[FEAT/#124] buildFeatures로 바인딩 정리

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,10 +82,9 @@ android {
         }
     }
 
-    dataBinding { enabled = true }
-
-    viewBinding {
-        enabled = true
+    buildFeatures {
+        viewBinding true
+        dataBinding true
     }
 
     compileOptions {
