--- a/app/build.gradle
+++ b/app/build.gradle
@@ -135,6 +135,10 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttpLoggingVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+
+    //splash screen
+    implementation 'androidx.core:core-splashscreen:1.0.1'
+
 }
 
 hilt {
