[FEAT/#126] splash screen api 적용

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         <activity android:name=".user.signin.SignInActivity" />
         <activity
             android:name=".SplashActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.Santa.Splash"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
