--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
         buildConfigField("String", "TOS_URL", properties['tosUrl'])
         buildConfigField("String", "PRIVACY_POLICY_RUL", properties['privacyPolicyUrl'])
         buildConfigField("String", "INQUIRY_URL", properties['inquiryUrl'])
-        
+
         signingConfigs {
             release {
                 storeFile file(keystoreProperties['storeFile'])
@@ -130,6 +130,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "com.jakewharton.timber:timber:5.0.1"
+    implementation 'com.airbnb.android:lottie:6.4.1'
 
     //firebase
     implementation platform('com.google.firebase:firebase-bom:32.8.0')
